# ipv6-route-listener

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh  run_tests.sh
.github/workflows/: verify.yml
route_listener/: logger.py  main.py  packet_filter.py  packet_parser.py  route_configurator.py  route_info.py  router_solicitor.py  scapy_handler.py
scripts/: verify.sh
tests/: conftest.py  test_packet_filtering.py  test_packet_parser.py  test_router_advertisement.py  test_scapy_handler.py
tests/integration/: test_route_processing.py
